Added dynamic functionality to html template

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,5 +4,12 @@
     </head>
     <body>
         <p>Served to you via Django!</p>
+        {% for post in posts %}           
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h1><a href="">{{ post.title }} </a></h1>
+                <p>{{ post.text|linebreaksbr }} </p>
+            </div>
+        {% endfor %}
     </body>
 </html>
