--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,15 +1,27 @@
+{% load staticfiles %}
 <html>
     <head>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <title>SudoMichael</title>
     </head>
     <body>
         <p>Served to you via Django!</p>
-        {% for post in posts %}           
-            <div>
-                <p>published: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }} </a></h1>
-                <p>{{ post.text|linebreaksbr }} </p>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for post in posts %}           
+                        <div class="post">
+                            <div class="date"
+                                <p>published: {{ post.published_date }}</p>
+                            </div>
+                            <h1><a href=""> {{ post.title }} </a></h1>
+                            <p>{{ post.text|linebreaksbr }} </p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
-        {% endfor %}
+        </div>
     </body>
 </html>
